--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "sl_shopping",
+  "name": "schedule",
   "private": true,
   "dependencies": {
-    "@fancyapps/fancybox": "^3.5.7",
     "@rails/actioncable": "^6.0.0",
-    "@rails/actiontext": "^6.1.1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
+    "i18n-js": "^3.8.0",
     "jquery": "^3.5.1",
-    "jquery.easing": "^1.4.1",
+    "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
